P4-Ch.05/monitoring-stack/virtualservice/hotrod-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - hotrod.apps.kowlon.my.id
  gateways:
    - production/apps
  http:
    - match: 
        - uri:   
            prefix: /  
      route:
        - destination:
            port:
              number: 8080
            host: example-hotrod
