P4-Ch.05/monitoring-stack/virtualservice/jaeger-ui-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger
  namespace: monitoring
spec:
  hosts:
    - jaeger.apps.kowlon.my.id
  gateways:
    - production/apps
  http:
    - match: 
        - uri:   
            prefix: /  
      route:
        - destination:
            port:
              number: 16686
            host: jaeger-query
