P4-Ch.05/monitoring-stack/virtualservice/vmalert-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vmalert
  namespace: monitoring
spec:
  hosts:
    - vmalert.apps.kowlon.my.id
  gateways:
    - production/apps
  http:
    - match: 
        - uri:   
            prefix: /  
      route:
        - destination:
            port:
              number: 
            host:
